; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad_glx.c_find_extensionsGLX.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad_glx.c_find_extensionsGLX.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"GLX_ARB_framebuffer_sRGB\00", align 1
@GLAD_GLX_ARB_framebuffer_sRGB = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [23 x i8] c"GLX_EXT_import_context\00", align 1
@GLAD_GLX_EXT_import_context = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [28 x i8] c"GLX_NV_multisample_coverage\00", align 1
@GLAD_GLX_NV_multisample_coverage = common dso_local global i8* null, align 8
@.str.3 = private unnamed_addr constant [28 x i8] c"GLX_SGIS_shared_multisample\00", align 1
@GLAD_GLX_SGIS_shared_multisample = common dso_local global i8* null, align 8
@.str.4 = private unnamed_addr constant [17 x i8] c"GLX_SGIX_pbuffer\00", align 1
@GLAD_GLX_SGIX_pbuffer = common dso_local global i8* null, align 8
@.str.5 = private unnamed_addr constant [18 x i8] c"GLX_NV_swap_group\00", align 1
@GLAD_GLX_NV_swap_group = common dso_local global i8* null, align 8
@.str.6 = private unnamed_addr constant [23 x i8] c"GLX_ARB_fbconfig_float\00", align 1
@GLAD_GLX_ARB_fbconfig_float = common dso_local global i8* null, align 8
@.str.7 = private unnamed_addr constant [19 x i8] c"GLX_SGIX_hyperpipe\00", align 1
@GLAD_GLX_SGIX_hyperpipe = common dso_local global i8* null, align 8
@.str.8 = private unnamed_addr constant [41 x i8] c"GLX_ARB_robustness_share_group_isolation\00", align 1
@GLAD_GLX_ARB_robustness_share_group_isolation = common dso_local global i8* null, align 8
@.str.9 = private unnamed_addr constant [21 x i8] c"GLX_INTEL_swap_event\00", align 1
@GLAD_GLX_INTEL_swap_event = common dso_local global i8* null, align 8
@.str.10 = private unnamed_addr constant [22 x i8] c"GLX_SGIX_video_resize\00", align 1
@GLAD_GLX_SGIX_video_resize = common dso_local global i8* null, align 8
@.str.11 = private unnamed_addr constant [35 x i8] c"GLX_EXT_create_context_es2_profile\00", align 1
@GLAD_GLX_EXT_create_context_es2_profile = common dso_local global i8* null, align 8
@.str.12 = private unnamed_addr constant [41 x i8] c"GLX_ARB_robustness_application_isolation\00", align 1
@GLAD_GLX_ARB_robustness_application_isolation = common dso_local global i8* null, align 8
@.str.13 = private unnamed_addr constant [18 x i8] c"GLX_NV_copy_image\00", align 1
@GLAD_GLX_NV_copy_image = common dso_local global i8* null, align 8
@.str.14 = private unnamed_addr constant [21 x i8] c"GLX_OML_sync_control\00", align 1
@GLAD_GLX_OML_sync_control = common dso_local global i8* null, align 8
@.str.15 = private unnamed_addr constant [25 x i8] c"GLX_EXT_framebuffer_sRGB\00", align 1
@GLAD_GLX_EXT_framebuffer_sRGB = common dso_local global i8* null, align 8
@.str.16 = private unnamed_addr constant [26 x i8] c"GLX_SGI_make_current_read\00", align 1
@GLAD_GLX_SGI_make_current_read = common dso_local global i8* null, align 8
@.str.17 = private unnamed_addr constant [22 x i8] c"GLX_MESA_swap_control\00", align 1
@GLAD_GLX_MESA_swap_control = common dso_local global i8* null, align 8
@.str.18 = private unnamed_addr constant [21 x i8] c"GLX_SGI_swap_control\00", align 1
@GLAD_GLX_SGI_swap_control = common dso_local global i8* null, align 8
@.str.19 = private unnamed_addr constant [30 x i8] c"GLX_EXT_fbconfig_packed_float\00", align 1
@GLAD_GLX_EXT_fbconfig_packed_float = common dso_local global i8* null, align 8
@.str.20 = private unnamed_addr constant [19 x i8] c"GLX_EXT_buffer_age\00", align 1
@GLAD_GLX_EXT_buffer_age = common dso_local global i8* null, align 8
@.str.21 = private unnamed_addr constant [21 x i8] c"GLX_3DFX_multisample\00", align 1
@GLAD_GLX_3DFX_multisample = common dso_local global i8* null, align 8
@.str.22 = private unnamed_addr constant [20 x i8] c"GLX_EXT_visual_info\00", align 1
@GLAD_GLX_EXT_visual_info = common dso_local global i8* null, align 8
@.str.23 = private unnamed_addr constant [19 x i8] c"GLX_SGI_video_sync\00", align 1
@GLAD_GLX_SGI_video_sync = common dso_local global i8* null, align 8
@.str.24 = private unnamed_addr constant [20 x i8] c"GLX_MESA_agp_offset\00", align 1
@GLAD_GLX_MESA_agp_offset = common dso_local global i8* null, align 8
@.str.25 = private unnamed_addr constant [21 x i8] c"GLX_SGIS_multisample\00", align 1
@GLAD_GLX_SGIS_multisample = common dso_local global i8* null, align 8
@.str.26 = private unnamed_addr constant [23 x i8] c"GLX_MESA_set_3dfx_mode\00", align 1
@GLAD_GLX_MESA_set_3dfx_mode = common dso_local global i8* null, align 8
@.str.27 = private unnamed_addr constant [28 x i8] c"GLX_EXT_texture_from_pixmap\00", align 1
@GLAD_GLX_EXT_texture_from_pixmap = common dso_local global i8* null, align 8
@.str.28 = private unnamed_addr constant [21 x i8] c"GLX_NV_video_capture\00", align 1
@GLAD_GLX_NV_video_capture = common dso_local global i8* null, align 8
@.str.29 = private unnamed_addr constant [20 x i8] c"GLX_ARB_multisample\00", align 1
@GLAD_GLX_ARB_multisample = common dso_local global i8* null, align 8
@.str.30 = private unnamed_addr constant [25 x i8] c"GLX_NV_delay_before_swap\00", align 1
@GLAD_GLX_NV_delay_before_swap = common dso_local global i8* null, align 8
@.str.31 = private unnamed_addr constant [20 x i8] c"GLX_SGIX_swap_group\00", align 1
@GLAD_GLX_SGIX_swap_group = common dso_local global i8* null, align 8
@.str.32 = private unnamed_addr constant [21 x i8] c"GLX_EXT_swap_control\00", align 1
@GLAD_GLX_EXT_swap_control = common dso_local global i8* null, align 8
@.str.33 = private unnamed_addr constant [22 x i8] c"GLX_SGIX_video_source\00", align 1
@GLAD_GLX_SGIX_video_source = common dso_local global i8* null, align 8
@.str.34 = private unnamed_addr constant [24 x i8] c"GLX_MESA_query_renderer\00", align 1
@GLAD_GLX_MESA_query_renderer = common dso_local global i8* null, align 8
@.str.35 = private unnamed_addr constant [23 x i8] c"GLX_ARB_create_context\00", align 1
@GLAD_GLX_ARB_create_context = common dso_local global i8* null, align 8
@.str.36 = private unnamed_addr constant [34 x i8] c"GLX_EXT_create_context_es_profile\00", align 1
@GLAD_GLX_EXT_create_context_es_profile = common dso_local global i8* null, align 8
@.str.37 = private unnamed_addr constant [18 x i8] c"GLX_SGIX_fbconfig\00", align 1
@GLAD_GLX_SGIX_fbconfig = common dso_local global i8* null, align 8
@.str.38 = private unnamed_addr constant [25 x i8] c"GLX_MESA_pixmap_colormap\00", align 1
@GLAD_GLX_MESA_pixmap_colormap = common dso_local global i8* null, align 8
@.str.39 = private unnamed_addr constant [29 x i8] c"GLX_SGIX_visual_select_group\00", align 1
@GLAD_GLX_SGIX_visual_select_group = common dso_local global i8* null, align 8
@.str.40 = private unnamed_addr constant [20 x i8] c"GLX_NV_video_output\00", align 1
@GLAD_GLX_NV_video_output = common dso_local global i8* null, align 8
@.str.41 = private unnamed_addr constant [25 x i8] c"GLX_SGIS_blended_overlay\00", align 1
@GLAD_GLX_SGIS_blended_overlay = common dso_local global i8* null, align 8
@.str.42 = private unnamed_addr constant [18 x i8] c"GLX_SGIX_dmbuffer\00", align 1
@GLAD_GLX_SGIX_dmbuffer = common dso_local global i8* null, align 8
@.str.43 = private unnamed_addr constant [34 x i8] c"GLX_ARB_create_context_robustness\00", align 1
@GLAD_GLX_ARB_create_context_robustness = common dso_local global i8* null, align 8
@.str.44 = private unnamed_addr constant [22 x i8] c"GLX_SGIX_swap_barrier\00", align 1
@GLAD_GLX_SGIX_swap_barrier = common dso_local global i8* null, align 8
@.str.45 = private unnamed_addr constant [26 x i8] c"GLX_EXT_swap_control_tear\00", align 1
@GLAD_GLX_EXT_swap_control_tear = common dso_local global i8* null, align 8
@.str.46 = private unnamed_addr constant [25 x i8] c"GLX_MESA_release_buffers\00", align 1
@GLAD_GLX_MESA_release_buffers = common dso_local global i8* null, align 8
@.str.47 = private unnamed_addr constant [22 x i8] c"GLX_EXT_visual_rating\00", align 1
@GLAD_GLX_EXT_visual_rating = common dso_local global i8* null, align 8
@.str.48 = private unnamed_addr constant [25 x i8] c"GLX_MESA_copy_sub_buffer\00", align 1
@GLAD_GLX_MESA_copy_sub_buffer = common dso_local global i8* null, align 8
@.str.49 = private unnamed_addr constant [16 x i8] c"GLX_SGI_cushion\00", align 1
@GLAD_GLX_SGI_cushion = common dso_local global i8* null, align 8
@.str.50 = private unnamed_addr constant [20 x i8] c"GLX_NV_float_buffer\00", align 1
@GLAD_GLX_NV_float_buffer = common dso_local global i8* null, align 8
@.str.51 = private unnamed_addr constant [20 x i8] c"GLX_OML_swap_method\00", align 1
@GLAD_GLX_OML_swap_method = common dso_local global i8* null, align 8
@.str.52 = private unnamed_addr constant [21 x i8] c"GLX_NV_present_video\00", align 1
@GLAD_GLX_NV_present_video = common dso_local global i8* null, align 8
@.str.53 = private unnamed_addr constant [30 x i8] c"GLX_SUN_get_transparent_index\00", align 1
@GLAD_GLX_SUN_get_transparent_index = common dso_local global i8* null, align 8
@.str.54 = private unnamed_addr constant [24 x i8] c"GLX_AMD_gpu_association\00", align 1
@GLAD_GLX_AMD_gpu_association = common dso_local global i8* null, align 8
@.str.55 = private unnamed_addr constant [31 x i8] c"GLX_ARB_create_context_profile\00", align 1
@GLAD_GLX_ARB_create_context_profile = common dso_local global i8* null, align 8
@.str.56 = private unnamed_addr constant [25 x i8] c"GLX_ARB_get_proc_address\00", align 1
@GLAD_GLX_ARB_get_proc_address = common dso_local global i8* null, align 8
@.str.57 = private unnamed_addr constant [29 x i8] c"GLX_ARB_vertex_buffer_object\00", align 1
@GLAD_GLX_ARB_vertex_buffer_object = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @find_extensionsGLX to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @find_extensionsGLX() #0 {
  %1 = call i8* @has_ext(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  store i8* %1, i8** @GLAD_GLX_ARB_framebuffer_sRGB, align 8
  %2 = call i8* @has_ext(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  store i8* %2, i8** @GLAD_GLX_EXT_import_context, align 8
  %3 = call i8* @has_ext(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0))
  store i8* %3, i8** @GLAD_GLX_NV_multisample_coverage, align 8
  %4 = call i8* @has_ext(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.3, i64 0, i64 0))
  store i8* %4, i8** @GLAD_GLX_SGIS_shared_multisample, align 8
  %5 = call i8* @has_ext(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.4, i64 0, i64 0))
  store i8* %5, i8** @GLAD_GLX_SGIX_pbuffer, align 8
  %6 = call i8* @has_ext(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.5, i64 0, i64 0))
  store i8* %6, i8** @GLAD_GLX_NV_swap_group, align 8
  %7 = call i8* @has_ext(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.6, i64 0, i64 0))
  store i8* %7, i8** @GLAD_GLX_ARB_fbconfig_float, align 8
  %8 = call i8* @has_ext(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.7, i64 0, i64 0))
  store i8* %8, i8** @GLAD_GLX_SGIX_hyperpipe, align 8
  %9 = call i8* @has_ext(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.8, i64 0, i64 0))
  store i8* %9, i8** @GLAD_GLX_ARB_robustness_share_group_isolation, align 8
  %10 = call i8* @has_ext(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.9, i64 0, i64 0))
  store i8* %10, i8** @GLAD_GLX_INTEL_swap_event, align 8
  %11 = call i8* @has_ext(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.10, i64 0, i64 0))
  store i8* %11, i8** @GLAD_GLX_SGIX_video_resize, align 8
  %12 = call i8* @has_ext(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.11, i64 0, i64 0))
  store i8* %12, i8** @GLAD_GLX_EXT_create_context_es2_profile, align 8
  %13 = call i8* @has_ext(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.12, i64 0, i64 0))
  store i8* %13, i8** @GLAD_GLX_ARB_robustness_application_isolation, align 8
  %14 = call i8* @has_ext(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.13, i64 0, i64 0))
  store i8* %14, i8** @GLAD_GLX_NV_copy_image, align 8
  %15 = call i8* @has_ext(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.14, i64 0, i64 0))
  store i8* %15, i8** @GLAD_GLX_OML_sync_control, align 8
  %16 = call i8* @has_ext(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.15, i64 0, i64 0))
  store i8* %16, i8** @GLAD_GLX_EXT_framebuffer_sRGB, align 8
  %17 = call i8* @has_ext(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.16, i64 0, i64 0))
  store i8* %17, i8** @GLAD_GLX_SGI_make_current_read, align 8
  %18 = call i8* @has_ext(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.17, i64 0, i64 0))
  store i8* %18, i8** @GLAD_GLX_MESA_swap_control, align 8
  %19 = call i8* @has_ext(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.18, i64 0, i64 0))
  store i8* %19, i8** @GLAD_GLX_SGI_swap_control, align 8
  %20 = call i8* @has_ext(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.19, i64 0, i64 0))
  store i8* %20, i8** @GLAD_GLX_EXT_fbconfig_packed_float, align 8
  %21 = call i8* @has_ext(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.20, i64 0, i64 0))
  store i8* %21, i8** @GLAD_GLX_EXT_buffer_age, align 8
  %22 = call i8* @has_ext(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.21, i64 0, i64 0))
  store i8* %22, i8** @GLAD_GLX_3DFX_multisample, align 8
  %23 = call i8* @has_ext(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.22, i64 0, i64 0))
  store i8* %23, i8** @GLAD_GLX_EXT_visual_info, align 8
  %24 = call i8* @has_ext(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.23, i64 0, i64 0))
  store i8* %24, i8** @GLAD_GLX_SGI_video_sync, align 8
  %25 = call i8* @has_ext(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.24, i64 0, i64 0))
  store i8* %25, i8** @GLAD_GLX_MESA_agp_offset, align 8
  %26 = call i8* @has_ext(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.25, i64 0, i64 0))
  store i8* %26, i8** @GLAD_GLX_SGIS_multisample, align 8
  %27 = call i8* @has_ext(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.26, i64 0, i64 0))
  store i8* %27, i8** @GLAD_GLX_MESA_set_3dfx_mode, align 8
  %28 = call i8* @has_ext(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.27, i64 0, i64 0))
  store i8* %28, i8** @GLAD_GLX_EXT_texture_from_pixmap, align 8
  %29 = call i8* @has_ext(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.28, i64 0, i64 0))
  store i8* %29, i8** @GLAD_GLX_NV_video_capture, align 8
  %30 = call i8* @has_ext(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.29, i64 0, i64 0))
  store i8* %30, i8** @GLAD_GLX_ARB_multisample, align 8
  %31 = call i8* @has_ext(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.30, i64 0, i64 0))
  store i8* %31, i8** @GLAD_GLX_NV_delay_before_swap, align 8
  %32 = call i8* @has_ext(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.31, i64 0, i64 0))
  store i8* %32, i8** @GLAD_GLX_SGIX_swap_group, align 8
  %33 = call i8* @has_ext(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.32, i64 0, i64 0))
  store i8* %33, i8** @GLAD_GLX_EXT_swap_control, align 8
  %34 = call i8* @has_ext(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.33, i64 0, i64 0))
  store i8* %34, i8** @GLAD_GLX_SGIX_video_source, align 8
  %35 = call i8* @has_ext(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.34, i64 0, i64 0))
  store i8* %35, i8** @GLAD_GLX_MESA_query_renderer, align 8
  %36 = call i8* @has_ext(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.35, i64 0, i64 0))
  store i8* %36, i8** @GLAD_GLX_ARB_create_context, align 8
  %37 = call i8* @has_ext(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.36, i64 0, i64 0))
  store i8* %37, i8** @GLAD_GLX_EXT_create_context_es_profile, align 8
  %38 = call i8* @has_ext(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.37, i64 0, i64 0))
  store i8* %38, i8** @GLAD_GLX_SGIX_fbconfig, align 8
  %39 = call i8* @has_ext(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.38, i64 0, i64 0))
  store i8* %39, i8** @GLAD_GLX_MESA_pixmap_colormap, align 8
  %40 = call i8* @has_ext(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.39, i64 0, i64 0))
  store i8* %40, i8** @GLAD_GLX_SGIX_visual_select_group, align 8
  %41 = call i8* @has_ext(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.40, i64 0, i64 0))
  store i8* %41, i8** @GLAD_GLX_NV_video_output, align 8
  %42 = call i8* @has_ext(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.41, i64 0, i64 0))
  store i8* %42, i8** @GLAD_GLX_SGIS_blended_overlay, align 8
  %43 = call i8* @has_ext(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.42, i64 0, i64 0))
  store i8* %43, i8** @GLAD_GLX_SGIX_dmbuffer, align 8
  %44 = call i8* @has_ext(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.43, i64 0, i64 0))
  store i8* %44, i8** @GLAD_GLX_ARB_create_context_robustness, align 8
  %45 = call i8* @has_ext(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.44, i64 0, i64 0))
  store i8* %45, i8** @GLAD_GLX_SGIX_swap_barrier, align 8
  %46 = call i8* @has_ext(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.45, i64 0, i64 0))
  store i8* %46, i8** @GLAD_GLX_EXT_swap_control_tear, align 8
  %47 = call i8* @has_ext(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.46, i64 0, i64 0))
  store i8* %47, i8** @GLAD_GLX_MESA_release_buffers, align 8
  %48 = call i8* @has_ext(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.47, i64 0, i64 0))
  store i8* %48, i8** @GLAD_GLX_EXT_visual_rating, align 8
  %49 = call i8* @has_ext(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.48, i64 0, i64 0))
  store i8* %49, i8** @GLAD_GLX_MESA_copy_sub_buffer, align 8
  %50 = call i8* @has_ext(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.49, i64 0, i64 0))
  store i8* %50, i8** @GLAD_GLX_SGI_cushion, align 8
  %51 = call i8* @has_ext(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.50, i64 0, i64 0))
  store i8* %51, i8** @GLAD_GLX_NV_float_buffer, align 8
  %52 = call i8* @has_ext(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.51, i64 0, i64 0))
  store i8* %52, i8** @GLAD_GLX_OML_swap_method, align 8
  %53 = call i8* @has_ext(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.52, i64 0, i64 0))
  store i8* %53, i8** @GLAD_GLX_NV_present_video, align 8
  %54 = call i8* @has_ext(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.53, i64 0, i64 0))
  store i8* %54, i8** @GLAD_GLX_SUN_get_transparent_index, align 8
  %55 = call i8* @has_ext(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.54, i64 0, i64 0))
  store i8* %55, i8** @GLAD_GLX_AMD_gpu_association, align 8
  %56 = call i8* @has_ext(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.55, i64 0, i64 0))
  store i8* %56, i8** @GLAD_GLX_ARB_create_context_profile, align 8
  %57 = call i8* @has_ext(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.56, i64 0, i64 0))
  store i8* %57, i8** @GLAD_GLX_ARB_get_proc_address, align 8
  %58 = call i8* @has_ext(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.57, i64 0, i64 0))
  store i8* %58, i8** @GLAD_GLX_ARB_vertex_buffer_object, align 8
  ret void
}

declare dso_local i8* @has_ext(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
